Updating capturing SVG, adjusting animations, fixing SVG rendering on safari for storage and transport illustrations

--- a/src/scss/components/details/div#detail-storage.scss
+++ b/src/scss/components/details/div#detail-storage.scss
@@ -21,9 +21,8 @@
     height: 100%;
     padding-left: 4em;
 
-    img {
-      object-fit: contain;
-      width: auto;
+    svg {
+      width: 100%;
       height: 100%;
     }
   }
