--- a/src/scss/components/details/div#detail-transport.scss
+++ b/src/scss/components/details/div#detail-transport.scss
@@ -20,6 +20,11 @@
     padding-left: 4em;
     position: relative;
 
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
     .titles {
       .fort-mcmurray {
         top: 4.6%;
